<resources>
    <string name="app_name">task02</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_name_gyroX">gyroX</string>
    <string name="tv_name_gyroY">gyroY</string>
    <string name="tv_name_gyroZ">gyroZ</string>
    <string name="tv_name_accZ">accZ</string>
    <string name="tv_name_accX">accX</string>
    <string name="tv_name_longitude">longitude</string>
    <string name="tx_name_latitude">latitude</string>
    <string name="tv_name_accY">accY</string>
    <string name="bn_name">Start Receive</string>
    <string name="bn_name2">Stop Receive</string>
</resources>
